--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "backpack/crud": "^3.6",
         "barryvdh/laravel-elfinder": "^0.4.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
